# feature-test

./: README.md
cpp/: README.md
cpp/benchmark/: main.cpp
cpp/boost_asio/resolver/: main.cpp
cpp/boost_sml/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
cpp/boost_sml/src/: SmFacade.h
cpp/conan-gtest-example/: CMakeLists.txt  conanfile.txt  main.cpp
cpp/concurrent_queue/: ConcurrentQueue.cpp
cpp/design_pattern/concept_interface_description/src/: main.cpp
cpp/design_pattern/deleted_interface_inheritance/src/: main.cpp
cpp/design_pattern/interface_inheritance/src/: main.cpp
cpp/design_pattern/type_trait_interface_description/src/: main.cpp
cpp/function_signature/: main.cpp
cpp/future/: main.cc  main2.cc
cpp/key-value-store/: CMakeLists.txt  README.md
cpp/key-value-store/src/: client.cpp  server.cpp
cpp/message_box/: MessageBox.cpp
cpp/multikeymap/: MultiKeyMap.cpp  MultiKeyMap.hpp
cpp/permutation_iterator/: main.cc
cpp/policy_member_check/: policy_member_check.cc
cpp/predef/: main.cpp
cpp/prefixsum/: prefixsum.cc
cpp/transactional_memory/: main.cpp
cpp/variadic_templates/: variadicFunction.cc
elixir/gol/: README.md  mix.exs
elixir/gol/test/: gol_test.exs
elixir/helloworld/: README.md
ex/gol/config/: config.exs
ex/gol/lib/: gol.ex
ex/helloworld/: helloworld.ex  mix.exs
ex/helloworld/lib/: helloworld.ex
js/electron/: README.md  index.html  main.js  package.json  timer.js
js/learning-javascript/: gulpfile.js  index.html  main.js  package.json
js/learning-javascript/es6/: test.js
js/learning-javascript/public/es6/: test.js
rust/: Cargo.toml
rust/examples/: workers.rs
ts/http/: package.json  tsconfig.json
ts/http/src/: PrometheusConnection.ts
ts/http/test/: PrometheusConnection.spec.ts
ts/socket.io/: package.json
ts/socket.io/client/: index.html
ts/socket.io/src/: server.ts
ts/websocket/: package.json
ts/websocket/src/: client.ts  server.ts
zig/templates/: main.zig
